force-app/main/default/objects/Audit_Run__c/Audit_Run__c.object-meta.xml
<CustomObject>
    <label>Audit Run</label>
    <pluralLabel>Audit Runs</pluralLabel>
    <nameField>
        <label>Audit Run Name</label>
        <type>AutoNumber</type>
        <displayFormat>AR-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>