force-app/main/default/objects/Audit_Run__c/fields/Error_Message__c.field-meta.xml
<CustomField><fullName>Error_Message__c</fullName><label>Error Message</label><length>32768</length><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>