force-app/main/default/objects/Audit_Run__c/fields/Executed_By__c.field-meta.xml
<CustomField><fullName>Executed_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Executed By</label><referenceTo>User</referenceTo><relationshipLabel>Audit Runs</relationshipLabel><relationshipName>Audit_Runs</relationshipName><required>false</required><type>Lookup</type></CustomField>