force-app/main/default/objects/Audit_Run__c/fields/New_Changes_Found__c.field-meta.xml
<CustomField><fullName>New_Changes_Found__c</fullName><label>New Changes Found</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>