force-app/main/default/objects/Audit_Run__c/fields/Run_Type__c.field-meta.xml
<CustomField>
    <fullName>Run_Type__c</fullName>
    <label>Run Type</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Setup Audit Sync</fullName><default>true</default><label>Setup Audit Sync</label></value><value><fullName>Metadata Snapshot</fullName><default>false</default><label>Metadata Snapshot</label></value><value><fullName>Manual Scan</fullName><default>false</default><label>Manual Scan</label></value><value><fullName>Scheduled Scan</fullName><default>false</default><label>Scheduled Scan</label></value></valueSetDefinition></valueSet>
</CustomField>