force-app/main/default/objects/Audit_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Started</fullName><default>true</default><label>Started</label></value><value><fullName>Completed</fullName><default>false</default><label>Completed</label></value><value><fullName>Failed</fullName><default>false</default><label>Failed</label></value><value><fullName>Partial Success</fullName><default>false</default><label>Partial Success</label></value></valueSetDefinition></valueSet>
</CustomField>